--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,21 @@
-
+@import "./utils/variables";
+@import "./base/base";
+@import "./utils/placeholders";
+@import "./components/header/header";
+@import "./components/main/main-index";
+@import "./components/main/main-portfolio";
+@import "./components/main/main-background-image";
+@import "./components/main/card-overlay";
+@import "./components/backdrop/checkbox-custom";
+@import "./components/backdrop/modal-backdrop";
+@import "./components/backdrop/modal";
+@import "./components/footer/footer";
+@import "./components/icons/advantages-icons";
+@import "./components/icons/backdrop-icons";
+@import "./components/icons/clients-icons";
+@import "./components/icons/studio-icons";
+@import "./components/our-advantages/our-advantages";
+@import "./components/our-clients/our-clients";
+@import "./components/our-products/our-products";
+@import "./components/our-team/our-team-index";
+@import "./components/icons/footer-icons";
